tests/spectest/exports.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\07\85\80\80\80\00"
  "\01\01\61\00\00\0a\88\80\80\80\00\01\82\80\80\80"
  "\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\07\89\80\80\80\00"
  "\02\01\61\00\00\01\62\00\00\0a\88\80\80\80\00\01"
  "\82\80\80\80\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\83\80\80\80\00\02\00\00\07\89\80\80\80"
  "\00\02\01\61\00\00\01\62\00\01\0a\8f\80\80\80\00"
  "\02\82\80\80\80\00\00\0b\82\80\80\80\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\07\85\80\80\80\00"
  "\01\01\61\00\00\0a\88\80\80\80\00\01\82\80\80\80"
  "\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\07\8d\80\80\80\00"
  "\03\01\61\00\00\01\62\00\00\01\63\00\00\0a\88\80"
  "\80\80\00\01\82\80\80\80\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\01\7f\00\03\82\80\80\80\00\01\00\07\89\80\80\80"
  "\00\02\01\61\00\00\01\62\00\00\0a\88\80\80\80\00"
  "\01\82\80\80\80\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\07\85\80\80\80\00"
  "\01\01\61\00\00\0a\88\80\80\80\00\01\82\80\80\80"
  "\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\07\85\80\80\80\00"
  "\01\01\61\00\00\0a\88\80\80\80\00\01\82\80\80\80"
  "\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\07\85\80\80\80\00"
  "\01\01\61\00\00\0a\88\80\80\80\00\01\82\80\80\80"
  "\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\07\85\80\80\80\00"
  "\01\01\61\00\00\0a\88\80\80\80\00\01\82\80\80\80"
  "\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\07\85\80\80\80\00"
  "\01\01\61\00\00\0a\88\80\80\80\00\01\82\80\80\80"
  "\00\00\0b"
)
(module instance)
(module definition $Func binary
  "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
  "\01\7f\01\7f\03\82\80\80\80\00\01\00\07\85\80\80"
  "\80\00\01\01\65\00\00\0a\8e\80\80\80\00\01\88\80"
  "\80\80\00\00\20\00\41\01\6a\0f\0b"
)
(module instance $Func $Func)
(assert_return (invoke "e" (i32.const 0x2a)) (i32.const 0x2b))
(assert_return (invoke $Func "e" (i32.const 0x2a)) (i32.const 0x2b))
(module definition binary "\00\61\73\6d\01\00\00\00")
(module instance)
(module definition $Other1 binary "\00\61\73\6d\01\00\00\00")
(module instance $Other1 $Other1)
(assert_return (invoke $Func "e" (i32.const 0x2a)) (i32.const 0x2b))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7f\03\82\80\80\80\00\01\00\07\8d\80\80\80"
  "\00\03\01\61\00\00\01\62\00\00\01\63\00\00\0a\8a"
  "\80\80\80\00\01\84\80\80\80\00\00\41\2a\0b"
)
(module instance)
(assert_return (invoke "a") (i32.const 0x2a))
(assert_return (invoke "b") (i32.const 0x2a))
(assert_return (invoke "c") (i32.const 0x2a))
(assert_invalid
  (module binary "\00\61\73\6d\01\00\00\00\07\85\80\80\80\00\01\01" "\61\00\00")
  "unknown function"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\07\85\80\80\80\00"
    "\01\01\61\00\01\0a\88\80\80\80\00\01\82\80\80\80"
    "\00\00\0b"
  )
  "unknown function"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\01\7f\00\02\96\80\80\80\00\01\08\73\70\65\63\74"
    "\65\73\74\09\70\72\69\6e\74\5f\69\33\32\00\00\07"
    "\85\80\80\80\00\01\01\61\00\01"
  )
  "unknown function"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\07\89\80\80\80\00"
    "\02\01\61\00\00\01\61\00\00\0a\88\80\80\80\00\01"
    "\82\80\80\80\00\00\0b"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\83\80\80\80\00\02\00\00\07\89\80\80\80"
    "\00\02\01\61\00\00\01\61\00\01\0a\8f\80\80\80\00"
    "\02\82\80\80\80\00\00\0b\82\80\80\80\00\00\0b"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\06\86\80\80\80\00"
    "\01\7f\00\41\00\0b\07\89\80\80\80\00\02\01\61\00"
    "\00\01\61\03\00\0a\88\80\80\80\00\01\82\80\80\80"
    "\00\00\0b"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\07\89\80\80\80\00\02\01\61\00\00\01"
    "\61\01\00\0a\88\80\80\80\00\01\82\80\80\80\00\00"
    "\0b"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\07\89\80\80\80\00\02\01\61\00\00\01\61"
    "\02\00\0a\88\80\80\80\00\01\82\80\80\80\00\00\0b"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\0d\85\80\80\80\00\02\00\00\00\00\07\8b\80"
    "\80\80\00\02\02\74\30\04\00\02\74\30\04\01"
  )
  "duplicate export name"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\06\86\80\80\80\00\01\7f"
  "\00\41\00\0b\07\85\80\80\80\00\01\01\61\03\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\06\86\80\80\80\00\01\7f"
  "\00\41\00\0b\07\89\80\80\80\00\02\01\61\03\00\01"
  "\62\03\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\06\8b\80\80\80\00\02\7f"
  "\00\41\00\0b\7f\00\41\00\0b\07\89\80\80\80\00\02"
  "\01\61\03\00\01\62\03\01"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\06\86\80\80\80\00\01\7f"
  "\00\41\00\0b\07\85\80\80\80\00\01\01\61\03\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\06\86\80\80\80\00\01\7f"
  "\00\41\00\0b\07\85\80\80\80\00\01\01\61\03\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\06\86\80\80\80\00\01\7f"
  "\00\41\00\0b\07\85\80\80\80\00\01\01\61\03\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\06\86\80\80\80\00\01\7f"
  "\00\41\00\0b\07\85\80\80\80\00\01\01\61\03\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\06\86\80\80\80\00\01\7f"
  "\00\41\00\0b\07\85\80\80\80\00\01\01\61\03\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\06\86\80\80\80\00\01\7f"
  "\00\41\00\0b\07\85\80\80\80\00\01\01\61\03\00"
)
(module instance)
(module definition $Global binary
  "\00\61\73\6d\01\00\00\00\06\86\80\80\80\00\01\7f"
  "\00\41\2a\0b\07\85\80\80\80\00\01\01\65\03\00"
)
(module instance $Global $Global)
(assert_return (get "e") (i32.const 0x2a))
(assert_return (get $Global "e") (i32.const 0x2a))
(module definition binary "\00\61\73\6d\01\00\00\00")
(module instance)
(module definition $Other2 binary "\00\61\73\6d\01\00\00\00")
(module instance $Other2 $Other2)
(assert_return (get $Global "e") (i32.const 0x2a))
(assert_invalid
  (module binary "\00\61\73\6d\01\00\00\00\07\85\80\80\80\00\01\01" "\61\03\00")
  "unknown global"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\06\86\80\80\80\00\01\7f"
    "\00\41\00\0b\07\85\80\80\80\00\01\01\61\03\01"
  )
  "unknown global"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\02\98\80\80\80\00\01\08"
    "\73\70\65\63\74\65\73\74\0a\67\6c\6f\62\61\6c\5f"
    "\69\33\32\03\7f\00\07\85\80\80\80\00\01\01\61\03"
    "\01"
  )
  "unknown global"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\06\86\80\80\80\00\01\7f"
    "\00\41\00\0b\07\89\80\80\80\00\02\01\61\03\00\01"
    "\61\03\00"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\06\8b\80\80\80\00\02\7f"
    "\00\41\00\0b\7f\00\41\00\0b\07\89\80\80\80\00\02"
    "\01\61\03\00\01\61\03\01"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\06\86\80\80\80\00"
    "\01\7f\00\41\00\0b\07\89\80\80\80\00\02\01\61\03"
    "\00\01\61\00\00\0a\88\80\80\80\00\01\82\80\80\80"
    "\00\00\0b"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\04\84\80\80\80\00\01\70"
    "\00\00\06\86\80\80\80\00\01\7f\00\41\00\0b\07\89"
    "\80\80\80\00\02\01\61\03\00\01\61\01\00"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\05\83\80\80\80\00\01\00"
    "\00\06\86\80\80\80\00\01\7f\00\41\00\0b\07\89\80"
    "\80\80\00\02\01\61\03\00\01\61\02\00"
  )
  "duplicate export name"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\84\80\80\80\00\01\70"
  "\00\00\07\85\80\80\80\00\01\01\61\01\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\84\80\80\80\00\01\70"
  "\00\00\07\89\80\80\80\00\02\01\61\01\00\01\62\01"
  "\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\87\80\80\80\00\02\70"
  "\00\00\70\00\00\07\89\80\80\80\00\02\01\61\01\00"
  "\01\62\01\01"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\84\80\80\80\00\01\70"
  "\00\00\07\85\80\80\80\00\01\01\61\01\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\85\80\80\80\00\01\70"
  "\01\00\01\07\85\80\80\80\00\01\01\61\01\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\84\80\80\80\00\01\70"
  "\00\00\07\85\80\80\80\00\01\01\61\01\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\85\80\80\80\00\01\70"
  "\01\00\01\07\85\80\80\80\00\01\01\61\01\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\84\80\80\80\00\01\70"
  "\00\00\07\85\80\80\80\00\01\01\61\01\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\85\80\80\80\00\01\70"
  "\01\00\01\07\85\80\80\80\00\01\01\61\01\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\84\80\80\80\00\01\70"
  "\00\00\07\85\80\80\80\00\01\01\61\01\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\85\80\80\80\00\01\70"
  "\01\00\01\07\85\80\80\80\00\01\01\61\01\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\84\80\80\80\00\01\70"
  "\00\00\07\85\80\80\80\00\01\01\61\01\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\85\80\80\80\00\01\70"
  "\01\00\01\07\85\80\80\80\00\01\01\61\01\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\84\80\80\80\00\01\70"
  "\00\00\07\85\80\80\80\00\01\01\61\01\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\04\85\80\80\80\00\01\70"
  "\01\00\01\07\85\80\80\80\00\01\01\61\01\00"
)
(module instance)
(assert_invalid
  (module binary "\00\61\73\6d\01\00\00\00\07\85\80\80\80\00\01\01" "\61\01\00")
  "unknown table"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\04\84\80\80\80\00\01\70"
    "\00\00\07\85\80\80\80\00\01\01\61\01\01"
  )
  "unknown table"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\02\95\80\80\80\00\01\08"
    "\73\70\65\63\74\65\73\74\05\74\61\62\6c\65\01\70"
    "\01\0a\14\07\85\80\80\80\00\01\01\61\01\01"
  )
  "unknown table"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\04\84\80\80\80\00\01\70"
    "\00\00\07\89\80\80\80\00\02\01\61\01\00\01\61\01"
    "\00"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\04\87\80\80\80\00\02\70"
    "\00\00\70\00\00\07\89\80\80\80\00\02\01\61\01\00"
    "\01\61\01\01"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\07\89\80\80\80\00\02\01\61\01\00\01"
    "\61\00\00\0a\88\80\80\80\00\01\82\80\80\80\00\00"
    "\0b"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\04\84\80\80\80\00\01\70"
    "\00\00\06\86\80\80\80\00\01\7f\00\41\00\0b\07\89"
    "\80\80\80\00\02\01\61\01\00\01\61\03\00"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\04\84\80\80\80\00\01\70"
    "\00\00\05\83\80\80\80\00\01\00\00\07\89\80\80\80"
    "\00\02\01\61\01\00\01\61\02\00"
  )
  "duplicate export name"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\05\83\80\80\80\00\01\00"
  "\00\07\85\80\80\80\00\01\01\61\02\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\05\83\80\80\80\00\01\00"
  "\00\07\89\80\80\80\00\02\01\61\02\00\01\62\02\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\05\83\80\80\80\00\01\00"
  "\00\07\85\80\80\80\00\01\01\61\02\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\05\84\80\80\80\00\01\01"
  "\00\01\07\85\80\80\80\00\01\01\61\02\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\05\83\80\80\80\00\01\00"
  "\00\07\85\80\80\80\00\01\01\61\02\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\05\84\80\80\80\00\01\01"
  "\00\01\07\85\80\80\80\00\01\01\61\02\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\05\83\80\80\80\00\01\00"
  "\00\07\85\80\80\80\00\01\01\61\02\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\05\84\80\80\80\00\01\01"
  "\00\01\07\85\80\80\80\00\01\01\61\02\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\05\83\80\80\80\00\01\00"
  "\00\07\85\80\80\80\00\01\01\61\02\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\05\84\80\80\80\00\01\01"
  "\00\01\07\85\80\80\80\00\01\01\61\02\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\05\83\80\80\80\00\01\00"
  "\00\07\85\80\80\80\00\01\01\61\02\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\05\84\80\80\80\00\01\01"
  "\00\01\07\85\80\80\80\00\01\01\61\02\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\05\83\80\80\80\00\01\00"
  "\00\07\85\80\80\80\00\01\01\61\02\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\05\84\80\80\80\00\01\01"
  "\00\01\07\85\80\80\80\00\01\01\61\02\00"
)
(module instance)
(assert_invalid
  (module binary "\00\61\73\6d\01\00\00\00\07\85\80\80\80\00\01\01" "\61\02\00")
  "unknown memory"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\05\83\80\80\80\00\01\00"
    "\00\07\85\80\80\80\00\01\01\61\02\01"
  )
  "unknown memory"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\02\95\80\80\80\00\01\08"
    "\73\70\65\63\74\65\73\74\06\6d\65\6d\6f\72\79\02"
    "\01\01\02\07\85\80\80\80\00\01\01\61\02\01"
  )
  "unknown memory"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\05\83\80\80\80\00\01\00"
    "\00\07\89\80\80\80\00\02\01\61\02\00\01\61\02\00"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\00\07\89\80\80\80\00\02\01\61\02\00\01\61"
    "\00\00\0a\88\80\80\80\00\01\82\80\80\80\00\00\0b"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\05\83\80\80\80\00\01\00"
    "\00\06\86\80\80\80\00\01\7f\00\41\00\0b\07\89\80"
    "\80\80\00\02\01\61\02\00\01\61\03\00"
  )
  "duplicate export name"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\04\84\80\80\80\00\01\70"
    "\00\00\05\83\80\80\80\00\01\00\00\07\89\80\80\80"
    "\00\02\01\61\02\00\01\61\01\00"
  )
  "duplicate export name"
)
